--- a/movie-reservation.csproj
+++ b/movie-reservation.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>movie_reservation</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.10" />
+  </ItemGroup>
+
 </Project>
