--- a/movie-reservation.csproj
+++ b/movie-reservation.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="8.1.3" />
     <PackageReference Include="LiteDB" Version="5.0.10" />
   </ItemGroup>
 
